feat: preserve main edits
